--- a/styles/style.css
+++ b/styles/style.css
@@ -13,9 +13,11 @@
     border: 0 none;
     direction: rtl;
     list-style-type: none;
-    box-sizing: border-box
+    box-sizing: border-box;
 }
-
+.englishDirection{
+  direction: ltr;
+}
 h5 {
     font-family: Arial, Helvetica, sans-serif
 }
@@ -25,13 +27,13 @@ h4 {
 }
 
 body {
-    background-color: #f5f5f5
+    background-color: rgba(255, 255, 255, 0.822);
 }
 
 header {
     width: 100%;
-    height: 141px;
-    overflow: hidden
+    height: 161px;
+    overflow: hidden;
 }
 
 header {
@@ -41,7 +43,7 @@ header {
 @import url(//fonts.googleapis.com/css?family=Lato:300:400);
 
 body {
-  margin:0;
+  margin: 0;
 }
 
 h1 {
@@ -49,30 +51,33 @@ h1 {
   font-weight:300;
   letter-spacing: 2px;
   font-size:48px;
+  padding: 5px;
 }
 p {
   font-family: 'Lato', sans-serif;
   letter-spacing: 1px;
   font-size:14px;
   color: #333333;
+  padding: 3px;
+  
 }
-
+/*form header cloud wave animate*/
 .header {
   position:relative;
   text-align:center;
-  background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%);
+  background: linear-gradient(60deg, rgb(162, 142, 245) 0%, rgb(206, 236, 243) 100%);
   color:white;
 }
-.logo {
+/* .logo {
   width:50px;
   fill:white;
   padding-right:15px;
   display:inline-block;
   vertical-align: middle;
-}
+} */
 
 .inner-header {
-  height:65vh;
+  height:20vh;
   width:100%;
   margin: 0;
   padding: 0;
@@ -132,7 +137,7 @@ p {
 }
 /*Shrinking for mobile*/
 @media (max-width: 768px) {
-  .waves {
+  .waves { 
     height:40px;
     min-height:40px;
   }
