--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,38 +1,99 @@
 @font-face {
-    font-family: 'Vazirmatn';
-    src: url('fonts/webfonts/Vazirmatn[wght].woff2') format('woff2 supports variations'),
-        url('fonts/webfonts/Vazirmatn[wght].woff2') format('woff2-variations');
-    font-weight: 100 900;
-    font-style: normal;
-    font-display: swap;
+  font-family: "Vazirmatn";
+  src: url("fonts/webfonts/Vazirmatn[wght].woff2")
+      format("woff2 supports variations"),
+    url("fonts/webfonts/Vazirmatn[wght].woff2") format("woff2-variations");
+  font-weight: 100 900;
+  font-style: normal;
+  font-display: swap;
 }
 * {
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    border: 0 none;
-    direction: rtl;
-    list-style-type: none;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  border: 0 none;
+  direction: rtl;
+  list-style-type: none;
+  box-sizing: border-box;
 }
-
-h5 {
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-h4 {
-    font-family: Vazirmatn;
-}
-
 body {
-    background-color: #f5f5f5;
-}
+  background-color: #f5f5f5;
+  margin: 0;
+  h5 {
+    font-family: Arial, Helvetica, sans-serif;
+  }
 
-header {
+  h4 {
+    font-family: Vazirmatn;
+  }
+  /* my wave header */
+  header {
     width: 100%;
     height: 141px;
     overflow: hidden;
-}
-header{
     grid-row-end: auto;
+    position: relative;
+  text-align: center;
+  background: linear-gradient(60deg, rgb(4, 245, 245), rgba(51, 255, 0, 0.473));
+  color: rgb(255, 255, 255);
+  }
+}
+.waves {
+  position: relative;
+  width: 100%;
+  height: 15vh;
+  margin-bottom: -7px;
+  /*Fix for safari gap*/
+  min-height: 100px;
+  max-height: 150px;
+}
+/* Animation */
+.parallax > use {
+  animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
+}
+
+.parallax > use:nth-child(1) {
+  animation-delay: -2s;
+  animation-duration: 7s;
+}
+
+.parallax > use:nth-child(2) {
+  animation-delay: -3s;
+  animation-duration: 10s;
+}
+
+.parallax > use:nth-child(3) {
+  animation-delay: -4s;
+  animation-duration: 13s;
+}
+
+.parallax > use:nth-child(4) {
+  animation-delay: -5s;
+  animation-duration: 20s;
+}
+
+@keyframes move-forever {
+  0% {
+    transform: translate3d(-90px, 0, 0);
+  }
+
+  100% {
+    transform: translate3d(85px, 0, 0);
+  }
+}
+
+/*Shrinking for mobile*/
+@media (max-width: 768px) {
+  .waves {
+    height: 40px;
+    min-height: 40px;
+  }
+
+  .content {
+    height: 30vh;
+  }
+
+  h1 {
+    font-size: 24px;
+  }
 }
