begin bottom & bootstrap for dynamicly

--- a/styles/_variable.scss
+++ b/styles/_variable.scss
@@ -1,1 +1,7 @@
-$backgroundColor1: #f5f5f5;
+$backgroundColor1: #ffffff;
+$backgroundColor2: rgb(4, 245, 245);
+$backgroundColor3: rgba(51, 255, 0, 0.473);
+$backgroundColor4: #fffb00;
+$backgroundColor5: #3d0334;
+// colors for text & bottom
+$color1: #f5f5f5
