--- a/styles/_impotant-vars.scss
+++ b/styles/_impotant-vars.scss
@@ -1,6 +1,7 @@
+// for class in this name
 @mixin font-english {
-    font-family: Arial, Helvetica, sans-serif;
-    
+    font: {
+        family: Arial, Helvetica, sans-serif;
+    }
     direction: ltr;
-  
 }
