--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,125 @@
-font-face{font-family:"Vazirmatn";src:url("fonts/webfonts/Vazirmatn[wght].woff2") format("woff2 supports variations"),url("fonts/webfonts/Vazirmatn[wght].woff2") format("woff2-variations");font-weight:100 900;font-style:normal;font-display:swap}*{margin:0;padding:0;text-decoration:none;border:0 none;direction:rtl;list-style-type:none;box-sizing:border-box}body{background-color:#f5f5f5;margin:0}body .font-english{font-family:Arial,Helvetica,sans-serif;direction:ltr}body h4{font-family:Vazirmatn}body header{width:100%;height:141px;overflow:hidden;grid-row-end:auto;position:relative;text-align:center;background:linear-gradient(60deg, rgb(4, 245, 245), rgba(51, 255, 0, 0.473));color:#fff}body header .waves{position:relative;width:100%;height:15vh;margin-bottom:-7px;min-height:100px;max-height:150px}body header .parallax>use{animation:move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite}body header .parallax>use:nth-child(1){animation-delay:-2s;animation-duration:7s}body header .parallax>use:nth-child(2){animation-delay:-3s;animation-duration:10s}body header .parallax>use:nth-child(3){animation-delay:-4s;animation-duration:13s}body header .parallax>use:nth-child(4){animation-delay:-5s;animation-duration:20s}@keyframes move-forever{0%{transform:translate3d(-90px, 0, 0)}100%{transform:translate3d(85px, 0, 0)}}@media(max-width: 768px){body header .waves{height:40px;min-height:40px}body header .content{height:30vh}body header h1{font-size:24px}}
+font-face {
+  font-family: "Vazirmatn";
+  src: url("fonts/webfonts/Vazirmatn[wght].woff2") format("woff2 supports variations"), url("fonts/webfonts/Vazirmatn[wght].woff2") format("woff2-variations");
+  font-weight: 100 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  border: 0 none;
+  direction: rtl;
+  list-style-type: none;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  background-color: #f5f5f5;
+  margin: 0;
+  /* my wave header */
+}
+
+body .font-english {
+  font-family: Arial, Helvetica, sans-serif;
+  direction: ltr;
+}
+
+body h4 {
+  font-family: Vazirmatn;
+}
+
+body header {
+  width: 100%;
+  height: 141px;
+  overflow: hidden;
+  grid-row-end: auto;
+  position: relative;
+  text-align: center;
+  background: linear-gradient(60deg, #04f5f5, rgba(51, 255, 0, 0.473));
+  color: #f5f5f5;
+  /*Animation for header wave*/
+  /*Shrinking for mobile*/
+}
+
+body header .waves {
+  position: relative;
+  width: 100%;
+  height: 15vh;
+  margin-bottom: -7px;
+  /*Fix for safari gap*/
+  min-height: 100px;
+  max-height: 150px;
+}
+
+body header .parallax > use {
+  -webkit-animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
+          animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
+}
+
+body header .parallax > use:nth-child(1) {
+  -webkit-animation-delay: -2s;
+          animation-delay: -2s;
+  -webkit-animation-duration: 7s;
+          animation-duration: 7s;
+}
+
+body header .parallax > use:nth-child(2) {
+  -webkit-animation-delay: -3s;
+          animation-delay: -3s;
+  -webkit-animation-duration: 10s;
+          animation-duration: 10s;
+}
+
+body header .parallax > use:nth-child(3) {
+  -webkit-animation-delay: -4s;
+          animation-delay: -4s;
+  -webkit-animation-duration: 13s;
+          animation-duration: 13s;
+}
+
+body header .parallax > use:nth-child(4) {
+  -webkit-animation-delay: -5s;
+          animation-delay: -5s;
+  -webkit-animation-duration: 20s;
+          animation-duration: 20s;
+}
+
+@-webkit-keyframes move-forever {
+  0% {
+    -webkit-transform: translate3d(-90px, 0, 0);
+            transform: translate3d(-90px, 0, 0);
+  }
+  100% {
+    -webkit-transform: translate3d(85px, 0, 0);
+            transform: translate3d(85px, 0, 0);
+  }
+}
+
+@keyframes move-forever {
+  0% {
+    -webkit-transform: translate3d(-90px, 0, 0);
+            transform: translate3d(-90px, 0, 0);
+  }
+  100% {
+    -webkit-transform: translate3d(85px, 0, 0);
+            transform: translate3d(85px, 0, 0);
+  }
+}
+
+@media (max-width: 768px) {
+  body header .waves {
+    height: 40px;
+    min-height: 40px;
+  }
+  body header .content {
+    height: 30vh;
+  }
+  body header h1 {
+    font-size: 24px;
+  }
+}
+/*# sourceMappingURL=style.css.map */
