--- a/styles/style.scss
+++ b/styles/style.scss
@@ -21,11 +21,13 @@ font-face {
 body {
   background-color: #f5f5f5;
   margin: 0;
-  .font-english{
-      @include font-english;
+  .font-english {
+    @include font-english;
   }
   h4 {
-    font-family: Vazirmatn;
+    font: {
+      family: Vazirmatn;
+    }
   }
   /* my wave header */
   header {
@@ -35,12 +37,8 @@ body {
     grid-row-end: auto;
     position: relative;
     text-align: center;
-    background: linear-gradient(
-      60deg,
-      rgb(4, 245, 245),
-      rgba(51, 255, 0, 0.473)
-    );
-    color: rgb(255, 255, 255);
+    background: linear-gradient(60deg, $backgroundColor2, $backgroundColor3);
+    color: $color1;
     // box inside header
     .waves {
       position: relative;
