--- a/styles/_variable.scss
+++ b/styles/_variable.scss
@@ -2,6 +2,6 @@ $backgroundColor1: #ffffff;
 $backgroundColor2: rgb(4, 245, 245);
 $backgroundColor3: rgba(51, 255, 0, 0.473);
 $backgroundColor4: #fffb00;
-$backgroundColor5: #3d0334;
+$backgroundColor5: #043133;
 // colors for text & bottom
 $color1: #f5f5f5
