--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,11 @@ font-face {
           box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+  min-height: 100%;
+}
+
 body {
   background-color: #f5f5f5;
   margin: 0;
@@ -39,10 +44,62 @@ body header {
   grid-row-end: auto;
   position: relative;
   text-align: center;
-  background: linear-gradient(60deg, #04f5f5, rgba(51, 255, 0, 0.473));
+  background-color: #043133;
   color: #f5f5f5;
   /*Animation for header wave*/
   /*Shrinking for mobile*/
+}
+
+body header .topNav {
+  text-align: center;
+  width: 50%;
+  min-height: 100%;
+  vertical-align: middle;
+  display: table-cell;
+}
+
+body header .topNav .btn-1 {
+  background: #a188fc;
+  /* Old browsers */
+  /* FF3.6-15 */
+  /* Chrome10-25,Safari5.1-6 */
+  background: -webkit-gradient(linear, left top, right top, from(#a188fc), color-stop(50%, #2eeade), to(#a188fc));
+  background: linear-gradient(to right, #a188fc 0%, #2eeade 50%, #a188fc 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a188fc', endColorstr='#a188fc',GradientType=1 );
+  /* IE6-9 */
+  background-size: 200%;
+  background-position: 100%;
+  color: #ccffff;
+  padding: 1em 3em;
+  border-radius: 2em;
+  display: inline-block;
+  -webkit-box-shadow: 0 0 20px #229999;
+          box-shadow: 0 0 20px #229999;
+  text-shadow: 0 0 5px #000;
+  -webkit-transition: all 0.7s;
+  transition: all 0.7s;
+  border: solid 1px #333;
+}
+
+body header .topNav .btn-1:hover {
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#a188fc+0,2eeade+100 */
+  background: #a188fc;
+  /* Old browsers */
+  /* FF3.6-15 */
+  /* Chrome10-25,Safari5.1-6 */
+  background: -webkit-gradient(linear, left top, right top, from(#a188fc), color-stop(50%, #2eeade), to(#a188fc));
+  background: linear-gradient(to right, #a188fc 0%, #2eeade 50%, #a188fc 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a188fc', endColorstr='#a188fc',GradientType=1 );
+  /* IE6-9 */
+  background-size: 200%;
+  background-position: 0px;
+  -webkit-box-shadow: 0 0 40px #55ffff;
+          box-shadow: 0 0 40px #55ffff;
+  color: #ccffff;
+  text-shadow: 0 0 30px #000000;
+  border: solid 1px #ccffff;
 }
 
 body header .waves {
