--- a/pages/page1.haml
+++ b/pages/page1.haml
@@ -5,4 +5,7 @@
     %body
         %h1 Welcome to My HAML Page
         %p This is a paragraph in HAML.
+        %p hiiiiiiiiiiiiiiii. 
+        %footer ok
+        
          
