--- a/index.haml
+++ b/index.haml
@@ -6,21 +6,18 @@
     %meta{:charset => "UTF-8", :content => "محمد زارعی مقدم mohammad zarei moghadam طراحی برنامه نویسی وبسایت وب اپلیکیشن", "http-equiv" => "refresh", :name => "میم زال وبسایتم"}/
     / bootstrap ↓
     %link{:hf => "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css", :rel => "stylesheet"}/
-  %body
-    %p
-      c
+
       %script{:src => "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"}
       %link{:href => "/styles/style.css", :rel => "stylesheet"}/
+       / google icon↓
       %link{:href => "https://fonts.googleapis.com/icon?family=Material+Icons", :rel => "stylesheet"}/
       %script{:crossorigin => "anonymous", :src => "https://kit.fontawesome.com/b8c948b754.js"}
-      /
-        google icon↓
-      %link{:href => "https://ffonts.googleapis.com/icon?family=Material+Icons"}/
+  %body
     %header
       %nav
         %h1#testJs1 سلام وب سایت شخصی من یعنی خوش اومدین
       / top  with dynamic bottoms
-      .topNav
+     %div.topNav
         %button.btn-1 ام زد سایت من
       / Waves Container
       %div
@@ -39,7 +36,8 @@
       %h1#whiteHatHacker1 hi mohammad congatulation to you
       %h4#hi
       / bottom form testing clean for runnig site
-      %h3{:onclick => "document.write(22 -2)", :type => "button"} hiiiiii
+      %h3{:onclick =
+      > "document.write(22 -2)", :type => "button"} hiiiiii
     /
       <section>
       </section>
