--- a/index.haml
+++ b/index.haml
@@ -1,46 +1,49 @@
-!!!
-%html{:dir => "rtl", :lang => "fa"}
-  / bootstrap javascript font awesome
-  %head
-    %title mzm website
-    %meta{:charset => "UTF-8", :content => "محمد زارعی مقدم mohammad zarei moghadam طراحی برنامه نویسی وبسایت وب اپلیکیشن", "http-equiv" => "refresh", :name => "میم زال وبسایتم"}/
-    / bootstrap ↓
-    %link{:hf => "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css", :rel => "stylesheet"}/
+-# !!!
+-# %html{:dir => "rtl", :lang => "fa"}
+-#   / bootstrap javascript font awesome
+-#   %head
+  -#   %title mzm website
+  -#   %meta{:charset => "UTF-8", :content => "محمد زارعی مقدم mohammad zarei moghadam طراحی برنامه نویسی وبسایت وب اپلیکیشن", "http-equiv" => "refresh", :name => "میم زال وبسایتم"}/
+  -#   / bootstrap ↓
+  -#   %link{:hf => "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css", :rel => "stylesheet"}/
 
-      %script{:src => "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"}
-      %link{:href => "/styles/style.css", :rel => "stylesheet"}/
-       / google icon↓
-      %link{:href => "https://fonts.googleapis.com/icon?family=Material+Icons", :rel => "stylesheet"}/
-      %script{:crossorigin => "anonymous", :src => "https://kit.fontawesome.com/b8c948b754.js"}
-  %body
-    %header
-      %nav
-        %h1#testJs1 سلام وب سایت شخصی من یعنی خوش اومدین
-      / top  with dynamic bottoms
-     %div.topNav
-        %button.btn-1 ام زد سایت من
-      / Waves Container
-      %div
-        %svg.waves{:preserveaspectratio => "none", "shape-rendering" => "auto", :viewbox => "0 24 150 28", :xmlns => "http://www.w3.org/2000/svg", "xmlns:xlink" => "http://www.w3.org/1999/xlink"}
-          %defs
-            %path#gentle-wave{:d => "M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"}
-          %g.parallax
-            %use{:fill => "rgba(255,255,255,0.7", :x => "48", "xlink:href" => "#gentle-wave", :y => "0"}
-            %use{:fill => "rgba(255,255,255,0.5)", :x => "48", "xlink:href" => "#gentle-wave", :y => "3"}
-            %use{:fill => "rgba(255,255,255,0.3)", :x => "48", "xlink:href" => "#gentle-wave", :y => "5"}
-            %use{:fill => "#fff", :x => "48", "xlink:href" => "#gentle-wave", :y => "7"}
-        / top navbar
-      / Waves end
-      / Header ends
-    %section
-      %h1#whiteHatHacker1 hi mohammad congatulation to you
-      %h4#hi
-      / bottom form testing clean for runnig site
-      %h3{:onclick =
-      > "document.write(22 -2)", :type => "button"} hiiiiii
-    /
-      <section>
-      </section>
-    %footer
-    %script{:src => "js/script.js"}
-    %h3 This is a placeholder text.
+  -#     %script{:src => "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"}
+  -#     %link{:href => "/styles/style.css", :rel => "stylesheet"}/
+  -#      / google icon↓
+  -#     %link{:href => "https://fonts.googleapis.com/icon?family=Material+Icons", :rel => "stylesheet"}/
+  -#     %script{:crossorigin => "anonymous", :src => "https://kit.fontawesome.com/b8c948b754.js"}
+  -# %body
+  -#   cd "C:/Users/mohammadzm/OneDrive/Documents/GitHub/mzm.app"
+  -#   %header
+  -#     %nav
+  -#       %h1#testJs1 سلام وب سایت شخصی من یعنی خوش اومدین
+  -#     / top  with dynamic bottoms
+  -#    %div.topNav
+  -#       %button.btn-1 ام زد سایت من
+  -#     / Waves Container
+  -#     %div
+    -#     %svg.waves{:preserveaspectratio => "none", "shape-rendering" => "auto", :viewbox => "0 24 150 28", :xmlns => "http://www.w3.org/2000/svg", "xmlns:xlink" => "http://www.w3.org/1999/xlink"}
+    -#       %defs
+    -#         %path#gentle-wave{:d => "M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"}
+    -#       %g.parallax
+    -#         %use{:fill => "rgba(255,255,255,0.7", :x => "48", "xlink:href" => "#gentle-wave", :y => "0"}
+    -#         %use{:fill => "rgba(255,255,255,0.5)", :x => "48", "xlink:href" => "#gentle-wave", :y => "3"}
+    -#         %use{:fill => "rgba(255,255,255,0.3)", :x => "48", "xlink:href" => "#gentle-wave", :y => "5"}
+    -#         %use{:fill => "#fff", :x => "48", "xlink:href" => "#gentle-wave", :y => "7"}
+    -#     / top navbar
+    -#   / Waves end
+    -#   / Header ends
+    -# %section
+    -#   %h1#whiteHatHacker1 hi mohammad congatulation to you
+    -#   %h4#hi
+    -#   / bottom form testing clean for runnig site
+    -#   %h3{:onclick =
+    -#   > "document.write(22 -2)", :type => "button"} hiiiiii
+    -# /
+    -#   <section>
+    -#   </section>
+    -# %footer
+    -# %script{:src => "js/script.js"}
+    -# %h3 This is a placeholder text.
+    -# %h1 this is form test ok 3 2 1 boooooom !
+    -# %h3
