--- a/index.haml
+++ b/index.haml
@@ -47,3 +47,11 @@
     -# %h3 This is a placeholder text.
     -# %h1 this is form test ok 3 2 1 boooooom !
     -# %h3
+
+
+!!!
+%html{:dir => "rtl", :lang => "fa"}
+  %head 
+  %header
+  %h1 %hiiii 
+  %p okkkkkkkkk
