--- a/index.haml
+++ b/index.haml
@@ -56,4 +56,5 @@
   %h1 %hiiii 
   %p okkkkkkkkk
   %p hiiiii
-  %hi convert haml to html auto plz 
+  %h2 convert haml to html auto plz 
+  %h2 hiii
