--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,126 @@
-*{margin:0;padding:0;text-decoration:none;border:0 none;direction:rtl;list-style-type:none;box-sizing:border-box}html{height:100%;min-height:100%}@in body{.font-english{font-family:vazirmatn;font-src:url("font/webfonts/Vazirmatn[wght].woff2") format("woff2 supports variations"),url("font/webfonts/Vazirmatn[wght].woff2") format("woff2-variations");font-font-weight:100 900;font-font-style:normal;font-font-display:swap;direction:rtl}header{width:100%;height:141px;overflow:hidden;grid-row-end:auto;position:relative;text-align:center;background-color:#043133;color:#f5f5f5}header .topNav{text-align:center;width:50%;min-height:100%;vertical-align:middle;display:table-cell}header .topNav .btn-1{background:#a188fc;background:linear-gradient(to right, #a188fc 0%, #2eeade 50%, #a188fc 100%);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#a188fc", endColorstr="#a188fc", GradientType=1);background-size:200%;background-position:100%;color:#cff;padding:1em 3em;border-radius:2em;display:inline-block;box-shadow:0 0 20px #299;text-shadow:0 0 5px #000;transition:all .7s;border:solid 1px #333}header .topNav .btn-1:hover{background:#a188fc;background:linear-gradient(to right, #a188fc 0%, #2eeade 50%, #a188fc 100%);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#a188fc", endColorstr="#a188fc", GradientType=1);background-size:200%;background-position:0px;box-shadow:0 0 40px #5ff;color:#cff;text-shadow:0 0 30px #000;border:solid 1px #cff}header .waves{position:relative;width:100%;height:15vh;margin-bottom:-7px;min-height:100px;max-height:150px}header .parallax>use{animation:move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite}header .parallax>use:nth-child(1){animation-delay:-2s;animation-duration:7s}header .parallax>use:nth-child(2){animation-delay:-3s;animation-duration:10s}header .parallax>use:nth-child(3){animation-delay:-4s;animation-duration:13s}header .parallax>use:nth-child(4){animation-delay:-5s;animation-duration:20s}@keyframes move-forever{0%{transform:translate3d(-90px, 0, 0)}100%{transform:translate3d(85px, 0, 0)}}@media(max-width: 768px){header .waves{height:40px;min-height:40px}header .content{height:30vh}header h1{font-size:24px}}}
+* {
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    border: 0 none;
+    direction: rtl;
+    list-style-type: none;
+    box-sizing: border-box
+}
+
+html {
+    height: 100%;
+    min-height: 100%
+}
+
+  body {
+    background-color: #f5f5f5;
+    margin: 0;
+    font-family: vazirmatn;
+
+  }
+
+    header {
+        width: 100%;
+        height: 141px;
+        overflow: hidden;
+        grid-row-end: auto;
+        position: relative;
+        text-align: center;
+        background-color: #043133;
+        color: #f5f5f5
+    }
+
+    header .topNav {
+        text-align: center;
+        width: 50%;
+        min-height: 100%;
+        vertical-align: middle;
+        display: table-cell
+    }
+
+    header .topNav .btn-1 {
+        background: #a188fc;
+        background: linear-gradient(to right, #a188fc 0%, #2eeade 50%, #a188fc 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#a188fc", endColorstr="#a188fc", GradientType=1);
+        background-size: 200%;
+        background-position: 100%;
+        color: #cff;
+        padding: 1em 3em;
+        border-radius: 2em;
+        display: inline-block;
+        box-shadow: 0 0 20px #299;
+        text-shadow: 0 0 5px #000;
+        transition: all .7s;
+        border: solid 1px #333
+    }
+
+    header .topNav .btn-1:hover {
+        background: #a188fc;
+        background: linear-gradient(to right, #a188fc 0%, #2eeade 50%, #a188fc 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#a188fc", endColorstr="#a188fc", GradientType=1);
+        background-size: 200%;
+        background-position: 0px;
+        box-shadow: 0 0 40px #5ff;
+        color: #cff;
+        text-shadow: 0 0 30px #000;
+        border: solid 1px #cff
+    }
+
+    header .waves {
+        position: relative;
+        width: 100%;
+        height: 15vh;
+        margin-bottom: -7px;
+        min-height: 100px;
+        max-height: 150px
+    }
+
+    header .parallax>use {
+        animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite
+    }
+
+    header .parallax>use:nth-child(1) {
+        animation-delay: -2s;
+        animation-duration: 7s
+    }
+
+    header .parallax>use:nth-child(2) {
+        animation-delay: -3s;
+        animation-duration: 10s
+    }
+
+    header .parallax>use:nth-child(3) {
+        animation-delay: -4s;
+        animation-duration: 13s
+    }
+
+    header .parallax>use:nth-child(4) {
+        animation-delay: -5s;
+        animation-duration: 20s
+    }
+
+    @keyframes move-forever {
+        0% {
+            transform: translate3d(-90px, 0, 0)
+        }
+
+        100% {
+            transform: translate3d(85px, 0, 0)
+        }
+    }
+
+    @media(max-width: 768px) {
+        header .waves {
+            height: 40px;
+            min-height: 40px
+        }
+
+        header .content {
+            height: 30vh
+        }
+
+        header h1 {
+            font-size: 24px
+        }
+    }
