--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,7 +4,7 @@
 @include font-persian;
 
 * {
-  @include basic-style
+  @include basic-style;
 }
 
 html {
@@ -13,7 +13,6 @@ html {
 
 body {
   @include body;
-
   /* my wave header */
   header {
     @include header;
