--- a/styles/_impotant-vars.scss
+++ b/styles/_impotant-vars.scss
@@ -6,7 +6,7 @@
 
     direction: ltr;
 }
-
+// maybe change font to variable ↓ 
 @mixin font-persian {
     font: {
         family: vazirmatn;
@@ -14,8 +14,8 @@
             url("font/webfonts/Vazirmatn[wght].woff2") format("woff2-variations");
         font-weight: 100 900;
         font-style: normal;
-        font-display: swap;
-    }
+        font-display: swap; 
+    } 
 
     direction: rtl;
 }
