--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,15 +1,13 @@
-@import "variable";
-@import "impotant-vars";
-@include basic-style;
-@include font-persian;
+@use "variable";
+@use "impotant-vars";
 
 * {
   
-   @include basic-style;
+  //  @include basic-style;
 }
 
 html {
-  @include html;
+  // @include html;
 }
 
 body {
@@ -153,10 +151,10 @@ body {
       }
 
       h1 {
-        font-size: 24px;
+        font-size: 240px;
 
       }
     }
   }
 }
-// now @extend can inhirit same attribute for diff class 
+// now @extend can inhirit same attribute for diff class  
