--- a/styles/_variable.scss
+++ b/styles/_variable.scss
@@ -4,4 +4,4 @@ $backgroundColor3: rgba(51, 255, 0, 0.473);
 $backgroundColor4: #fffb00;
 $backgroundColor5: #043133;
 // colors for text & bottom
-$color1: #f5f5f5
+$color1: #f5f5f5;   
