--- a/styles/_impotant-vars.scss
+++ b/styles/_impotant-vars.scss
@@ -1,4 +1,5 @@
 // @include ↓ in css style you wana 
+@forward "important-vars";
 @mixin font-english {
     font: {
         family: Arial, Helvetica, sans-serif;
@@ -45,11 +46,11 @@
     overflow: hidden;
 }
 
-@mixin body {
-    background-color: #f5f5f5;
+@mixin body($backgroundColor1) {
+    background-color: $backgroundColor1;
     margin: 0;
 
     font: {
         family: vazirmatn;
     }
-}
+} 
