--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,160 +1,160 @@
-@use "variable";
-@use "impotant-vars";
+@use 'variable';
+@use 'impotant-vars';
 
 * {
-  
-  //  @include basic-style;
+
+  @extend basic-style;
 }
 
 html {
-  // @include html;
-}
+  @extend html;
 
-body {
-  @include body;
-  /* my wave header */
-  header {
-    @include header;
-    grid-row-end: auto;
-    position: relative;
-    text-align: center;
-    background-color: $backgroundColor5;
-    // background: linear-gradient(60deg, $backgroundColor2, $backgroundColor3);
-    color: $color1;
+  body {
+    @extend body;
 
-    .topNav {
-      text-align: center;
-      width: 50%;
-      min-height: 100%;
-      vertical-align: middle;
-      display: table-cell;
-
-      .btn-1 {
-        background: #a188fc;
-        /* Old browsers */
-        background: -moz-linear-gradient(left,
-            #a188fc 0%,
-            #2eeade 50%,
-            #a188fc 100%);
-        /* FF3.6-15 */
-        background: -webkit-linear-gradient(left,
-            #a188fc 0%,
-            #2eeade 50%,
-            #a188fc 100%);
-        /* Chrome10-25,Safari5.1-6 */
-        background: linear-gradient(to right,
-            #a188fc 0%,
-            #2eeade 50%,
-            #a188fc 100%);
-        /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#a188fc', endColorstr='#a188fc', GradientType=1);
-        /* IE6-9 */
-        background-size: 200%;
-        background-position: 100%;
-        color: #ccffff;
-        padding: 1em 3em;
-        border-radius: 2em;
-        display: inline-block;
-        box-shadow: 0 0 20px #229999;
-        text-shadow: 0 0 5px #000;
-        -webkit-transition: all 0.7s;
-        -moz-transition: all 0.7s;
-        transition: all 0.7s;
-        border: solid 1px #333;
-      }
-
-      .btn-1:hover {
-        /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#a188fc+0,2eeade+100 */
-        background: #a188fc;
-        /* Old browsers */
-        background: -moz-linear-gradient(left,
-            #a188fc 0%,
-            #2eeade 50%,
-            #a188fc 100%);
-        /* FF3.6-15 */
-        background: -webkit-linear-gradient(left,
-            #a188fc 0%,
-            #2eeade 50%,
-            #a188fc 100%);
-        /* Chrome10-25,Safari5.1-6 */
-        background: linear-gradient(to right,
-            #a188fc 0%,
-            #2eeade 50%,
-            #a188fc 100%);
-        /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#a188fc', endColorstr='#a188fc', GradientType=1);
-        /* IE6-9 */
-        background-size: 200%;
-        background-position: 0px;
-        box-shadow: 0 0 40px #55ffff;
-        color: #ccffff;
-        text-shadow: 0 0 30px #000000;
-        border: solid 1px #ccffff;
-      }
-    }
-
-    // box inside header
-    .waves {
+    /* my wave header */
+    header {
+      @extend header;
+      grid-row-end: auto;
       position: relative;
-      width: 100%;
-      height: 15vh;
-      margin-bottom: -7px;
-      /*Fix for safari gap*/
-      min-height: 100px;
-      max-height: 150px;
-    }
+      text-align: center;
+      background-color: $backgroundColor5;
+      // background: linear-gradient(60deg, $backgroundColor2, $backgroundColor3);
+      color: $color1;
 
-    /*Animation for header wave*/
-    .parallax>use {
-      animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
-    }
+      .topNav {
+        text-align: center;
+        width: 50%;
+        min-height: 100%;
+        vertical-align: middle;
+        display: table-cell;
 
-    .parallax>use:nth-child(1) {
-      animation-delay: -2s;
-      animation-duration: 7s;
-    }
+        .btn-1 {
+          background: #a188fc;
+          /* Old browsers */
+          background: -moz-linear-gradient(left,
+              #a188fc 0%,
+              #2eeade 50%,
+              #a188fc 100%);
+          /* FF3.6-15 */
+          background: -webkit-linear-gradient(left,
+              #a188fc 0%,
+              #2eeade 50%,
+              #a188fc 100%);
+          /* Chrome10-25,Safari5.1-6 */
+          background: linear-gradient(to right,
+              #a188fc 0%,
+              #2eeade 50%,
+              #a188fc 100%);
+          /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+          filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#a188fc', endColorstr='#a188fc', GradientType=1);
+          /* IE6-9 */
+          background-size: 200%;
+          background-position: 100%;
+          color: #ccffff;
+          padding: 1em 3em;
+          border-radius: 2em;
+          display: inline-block;
+          box-shadow: 0 0 20px #229999;
+          text-shadow: 0 0 5px #000;
+          -webkit-transition: all 0.7s;
+          -moz-transition: all 0.7s;
+          transition: all 0.7s;
+          border: solid 1px #333;
+        }
 
-    .parallax>use:nth-child(2) {
-      animation-delay: -3s;
-      animation-duration: 10s;
-    }
-
-    .parallax>use:nth-child(3) {
-      animation-delay: -4s;
-      animation-duration: 13s;
-    }
-
-    .parallax>use:nth-child(4) {
-      animation-delay: -5s;
-      animation-duration: 20s;
-    }
-
-    @keyframes move-forever {
-      0% {
-        transform: translate3d(-90px, 0, 0);
+        .btn-1:hover {
+          /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#a188fc+0,2eeade+100 */
+          background: #a188fc;
+          /* Old browsers */
+          background: -moz-linear-gradient(left,
+              #a188fc 0%,
+              #2eeade 50%,
+              #a188fc 100%);
+          /* FF3.6-15 */
+          background: -webkit-linear-gradient(left,
+              #a188fc 0%,
+              #2eeade 50%,
+              #a188fc 100%);
+          /* Chrome10-25,Safari5.1-6 */
+          background: linear-gradient(to right,
+              #a188fc 0%,
+              #2eeade 50%,
+              #a188fc 100%);
+          /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+          filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#a188fc', endColorstr='#a188fc', GradientType=1);
+          /* IE6-9 */
+          background-size: 200%;
+          background-position: 0px;
+          box-shadow: 0 0 40px #55ffff;
+          color: #ccffff;
+          text-shadow: 0 0 30px #000000;
+          border: solid 1px #ccffff;
+        }
       }
 
-      100% {
-        transform: translate3d(85px, 0, 0);
-      }
-    }
-
-    /*Shrinking for mobile*/
-    @media (max-width: 768px) {
+      // box inside header
       .waves {
-        height: 40px;
-        min-height: 40px;
+        position: relative;
+        width: 100%;
+        height: 15vh;
+        margin-bottom: -7px;
+        /*Fix for safari gap*/
+        min-height: 100px;
+        max-height: 150px;
       }
 
-      .content {
-        height: 30vh;
+      /*Animation for header wave*/
+      .parallax>use {
+        animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
       }
 
-      h1 {
-        font-size: 240px;
+      .parallax>use:nth-child(1) {
+        animation-delay: -2s;
+        animation-duration: 7s;
+      }
 
+      .parallax>use:nth-child(2) {
+        animation-delay: -3s;
+        animation-duration: 10s;
+      }
+
+      .parallax>use:nth-child(3) {
+        animation-delay: -4s;
+        animation-duration: 13s;
+      }
+
+      .parallax>use:nth-child(4) {
+        animation-delay: -5s;
+        animation-duration: 20s;
+      }
+
+      @keyframes move-forever {
+        0% {
+          transform: translate3d(-90px, 0, 0);
+        }
+
+        100% {
+          transform: translate3d(85px, 0, 0);
+        }
+      }
+
+      /*Shrinking for mobile*/
+      @media (max-width: 768px) {
+        .waves {
+          height: 40px;
+          min-height: 40px;
+        }
+
+        .content {
+          height: 30vh;
+        }
+
+        h1 {
+          font-size: 240px;
+
+        }
       }
     }
   }
 }
-// now @extend can inhirit same attribute for diff class  
