--- a/styles/_impotant-vars.scss
+++ b/styles/_impotant-vars.scss
@@ -46,6 +46,7 @@
     overflow: hidden;
 }
 // today noting ok than plz do this 
+// should change 
 
 @mixin body($backgroundColor1) {
     background-color: $backgroundColor1;
