--- a/index.haml
+++ b/index.haml
@@ -9,7 +9,7 @@
   %body
     %header
       %nav
-        %h1#test-js1 کاکو سایتم خوش اومدین  ه زال 
+        %h1#test-js1
       %div.topNav
         %button.btn-1
       %div
