--- a/styles/_impotant-vars.scss
+++ b/styles/_impotant-vars.scss
@@ -56,7 +56,7 @@
     width: 100%;
     height: 141px;
     overflow: hidden;
-}
+} 
 
 // today noting ok than plz do this 
-// should change 
+// should change  today just focuse on night search mobile first & cross browser 
