--- a/index.haml
+++ b/index.haml
@@ -30,3 +30,4 @@
     %script{:src => "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"}
     %script{:src => "js/script.js"}
 
+// ready form new guest create book form sidebar in my page hey see your template want create 
