--- a/index.haml
+++ b/index.haml
@@ -3,7 +3,7 @@
 %html{:dir => "rtl", :lang => "fa"}
   %head
     %title mzm website
-    %meta{:charset => "UTF-8", :content => "محمد زارعی مقدم mohammad zarei moghadam طراحی برنامه نویسی وبسایت وب اپلیکیشن", "http-equiv" => "refresh", :name => "میم زال وبسایتم"}
+    %meta{:charset => "UTF-8", :content => "محمد زارعی مقدم mohammad zarei moghadam طراحی برنامه نویسی وبسایت وب اپلیکیشن", "http-equiv" => "refresh", :name => "میم زال وبسایتم", :content => "width=deviced-width, initial-scale=1.0"}
     %link{:href => "/styles/style.css", :rel => "stylesheet"}
     %link{:href => "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css", :rel => "stylesheet"}
     %link{:href => "https://fonts.googleapis.com/icon?family=Material+Icons", :rel => "stylesheet"}
