--- a/index.haml
+++ b/index.haml
@@ -42,6 +42,6 @@
     %script{:crossorigin => "anonymous", :src => "https://kit.fontawesome.com/b8c948b754.js"}
     %script{:src => "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"}
     %script{:src => "js/script.js"}
+-# persion text: 
 
-// ready form new guest create book form sidebar in my page hey see your template want create gem install haml
 
