--- a/styles/style.scss
+++ b/styles/style.scss
@@ -20,18 +20,21 @@ html {
       .header-menu {
            max-width: 1296px;
           height: 48px;
-        // .logo {}
+        /* .logo {}*/
 
         .menu-navigation {
        
+display: flex;
 
-          
+
           /*.menu-list {
             .menu-item {
-              a {}
+              .menu-link {}
 
-              span {}
+              .menu-text {}
             }
+            .menu-contact {
+        }
           }*/
 
         }
