--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,33 @@
-html{height:100%;min-height:100%;direction:ltr}*{margin:0;padding:0;text-decoration:none;border:0 none;list-style-type:none;box-sizing:border-box;color:red}html body{background-color:#fff}html body header{max-width:100%;height:48px}html body header .header-menu{max-width:1296px;height:48px}html body header .header-menu .menu-navigation{display:flex}
+html {
+  height: 100%;
+  min-height: 100%;
+  direction: rtl
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  border: 0 none;
+  list-style-type: none;
+  box-sizing: border-box;
+  color: red
+}
+
+html body {
+  background-color: #fff
+}
+
+html body header {
+  max-width: 100%;
+  height: 48px
+}
+
+html body header .header-menu {
+  max-width: 1296px;
+  height: 48px
+}
+
+html body header .header-menu .menu-navigation {
+  display: flex
+}
