--- a/styles/style.css
+++ b/styles/style.css
@@ -1,33 +1,73 @@
-html {
-  height: 100%;
-  min-height: 100%;
-  direction: rtl
+* {
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    border: 0 none;
+    list-style-type: none;
+    box-sizing: border-box
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  text-decoration: none;
-  border: 0 none;
-  list-style-type: none;
-  box-sizing: border-box;
-  color: red
+html {
+    height: 100%;
+    min-height: 100%;
+    direction: rtl
 }
 
 html body {
-  background-color: #fff
+    background-color: #fff
 }
 
 html body header {
-  max-width: 100%;
-  height: 48px
+    max-width: 100%;
+    height: 48px;
+    background-color: #0ee7b1
 }
 
 html body header .header-menu {
-  max-width: 1296px;
-  height: 48px
+    max-width: 1296px;
+    height: 48px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex-flow: row wrap;
+    justify-content: center
+}
+
+html body header .header-menu .logo {
+    max-width: 100px;
+    height: 50px;
+    background-color: red
 }
 
 html body header .header-menu .menu-navigation {
-  display: flex
+    background-color: #2e2929;
+    display: flex;
+    flex-direction: row
+}
+
+html body header .header-menu .menu-navigation .menu-list {
+    display: flex;
+    flex-direction: row
+}
+
+html body header .header-menu .menu-navigation .menu-list .menu-item {
+    background-color: #7fff00
+}
+
+html body header .header-menu .menu-navigation .menu-list .menu-item .menu-link {
+    background-color: green
+}
+
+html body header .header-menu .menu-navigation .menu-list .menu-item .menu-text {
+    background-color: #adff2f
+}
+
+html body header .header-menu .menu-contact {
+    width: 100px;
+    height: 50px;
+    background-color: rgba(85, 73, 3, .795)
+}
+
+html body header .header-menu .menu-contact .contact-text {
+    background-color: #00f7ff
 }
